sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:10: error: not found: value j
   echange(j,i)
           ^