sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  for (i<-0 to getNombreValeurs()-3){
    var indiceMin=i
    for (j<-i+1 to getNombreValeurs()-1){
      if (plusPetit(j,indiceMin)){
        indiceMin=j
      }
    }
   echange(j,i)
  }
}